// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableContainer getDownloadIcon() if props.downloadFormat is csv should return a fa-file-excel-o icon 1`] = `
<i
  className="fa fa-file-excel-o"
/>
`;

exports[`TableContainer getDownloadIcon() if props.downloadFormat is excel should return a fa-file-excel-o icon 1`] = `
<i
  className="fa fa-file-excel-o"
/>
`;

exports[`TableContainer getDownloadIcon() if props.downloadFormat is pdf should return a fa-file-pdf-o icon 1`] = `
<i
  className="fa fa-file-pdf-o"
/>
`;

exports[`TableContainer getDownloadIcon() if props.downloadFormat is word should return a fa-file-word-o icon 1`] = `
<i
  className="fa fa-file-excel-o"
/>
`;

exports[`TableContainer if props.filters is defined if not props.showFilters should render the right link 1`] = `
<TableContainer
  defaultShowFilters={false}
  downloadFormat={null}
  filters={
    <div>
      Some filters
    </div>
  }
  onDownload={null}
  onFiltersToggle={null}
  showFilters={false}
  totals={null}
>
  <div
    className="TableContainer"
  >
    <Container
      className="TableContainer__toolbar"
      size="fluid"
    >
      <div
        className="Container--fluid TableContainer__toolbar"
      >
        <Grid
          align="center"
          className="TableContainer__toolbar__grid"
          direction="horizontal"
          gutter={false}
          justify="start"
          size={
            Array [
              "0 0 100px",
              "fill",
              "0 0 100px",
            ]
          }
        >
          <div
            className="grid-component TableContainer__toolbar__grid grid-component--center-align grid-component--horizontal-direction grid-component--start-justify"
          >
            <div
              className="TableContainer__toolbar__filters"
              style={
                Object {
                  "flex": "0 0 100px",
                }
              }
            >
              <a
                className="TableContainer__link"
                href="#"
                onClick={[Function]}
              >
                <span>
                  Filtros avanzados 
                  <i
                    className="fa fa-filter"
                  />
                </span>
              </a>
            </div>
            <div
              className="TableContainer__toolbar__totals"
              style={
                Object {
                  "flex": 1,
                }
              }
            />
            <div
              className="TableContainer__toolbar__downloads"
              style={
                Object {
                  "flex": "0 0 100px",
                }
              }
            />
          </div>
        </Grid>
      </div>
    </Container>
    <div
      className="TableContainer__filters"
      style={
        Object {
          "bottom": 0,
          "top": 0,
        }
      }
    >
      <div>
        Some filters
      </div>
    </div>
    <div
      className="TableContainer__contents"
    >
      <Container
        className={null}
        size="normal"
      >
        <div
          className="Container--normal"
        >
          Test
        </div>
      </Container>
    </div>
  </div>
</TableContainer>
`;

exports[`TableContainer if props.filters is defined if props.showFilters should render the right link 1`] = `
<TableContainer
  defaultShowFilters={false}
  downloadFormat={null}
  filters={
    <div>
      Some filters
    </div>
  }
  onDownload={null}
  onFiltersToggle={null}
  showFilters={true}
  totals={null}
>
  <div
    className="TableContainer TableContainer--filters-visible"
  >
    <Container
      className="TableContainer__toolbar"
      size="fluid"
    >
      <div
        className="Container--fluid TableContainer__toolbar"
      >
        <Grid
          align="center"
          className="TableContainer__toolbar__grid"
          direction="horizontal"
          gutter={false}
          justify="start"
          size={
            Array [
              "0 0 100px",
              "fill",
              "0 0 100px",
            ]
          }
        >
          <div
            className="grid-component TableContainer__toolbar__grid grid-component--center-align grid-component--horizontal-direction grid-component--start-justify"
          >
            <div
              className="TableContainer__toolbar__filters"
              style={
                Object {
                  "flex": "0 0 100px",
                }
              }
            >
              <a
                className="TableContainer__link TableContainer__link--active"
                href="#"
                onClick={[Function]}
              >
                <span>
                  Cerrar filtros 
                  <i
                    className="fa fa-times"
                  />
                </span>
              </a>
            </div>
            <div
              className="TableContainer__toolbar__totals"
              style={
                Object {
                  "flex": 1,
                }
              }
            />
            <div
              className="TableContainer__toolbar__downloads"
              style={
                Object {
                  "flex": "0 0 100px",
                }
              }
            />
          </div>
        </Grid>
      </div>
    </Container>
    <div
      className="TableContainer__filters"
      style={
        Object {
          "bottom": 0,
          "top": 0,
        }
      }
    >
      <div>
        Some filters
      </div>
    </div>
    <div
      className="TableContainer__contents"
    >
      <Container
        className={null}
        size="normal"
      >
        <div
          className="Container--normal"
        >
          Test
        </div>
      </Container>
    </div>
  </div>
</TableContainer>
`;

exports[`TableContainer should render with minimum props 1`] = `
<TableContainer
  defaultShowFilters={false}
  downloadFormat={null}
  filters={null}
  onDownload={null}
  onFiltersToggle={null}
  showFilters={null}
  totals={null}
>
  <div
    className="TableContainer"
  >
    <Container
      className="TableContainer__toolbar"
      size="fluid"
    >
      <div
        className="Container--fluid TableContainer__toolbar"
      >
        <Grid
          align="center"
          className="TableContainer__toolbar__grid"
          direction="horizontal"
          gutter={false}
          justify="start"
          size={
            Array [
              "0 0 100px",
              "fill",
              "0 0 100px",
            ]
          }
        >
          <div
            className="grid-component TableContainer__toolbar__grid grid-component--center-align grid-component--horizontal-direction grid-component--start-justify"
          >
            <div
              className="TableContainer__toolbar__filters"
              style={
                Object {
                  "flex": "0 0 100px",
                }
              }
            />
            <div
              className="TableContainer__toolbar__totals"
              style={
                Object {
                  "flex": 1,
                }
              }
            />
            <div
              className="TableContainer__toolbar__downloads"
              style={
                Object {
                  "flex": "0 0 100px",
                }
              }
            />
          </div>
        </Grid>
      </div>
    </Container>
    <div
      className="TableContainer__contents"
    >
      <Container
        className={null}
        size="normal"
      >
        <div
          className="Container--normal"
        >
          Test
        </div>
      </Container>
    </div>
  </div>
</TableContainer>
`;
